--- a/index.html
+++ b/index.html
@@ -1,134 +1,1 @@
-<!DOCTYPE html>
-<html lang="ru">
-<head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>howos1 — Личный сайт</title>
-<link
-  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
-  rel="stylesheet"
-/>
-<style>
-  body {
-    margin: 0;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background: linear-gradient(135deg, #5a2a83, #8f4ec2);
-    color: #f0e9ff;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    min-height: 100vh;
-    padding: 40px 20px;
-    text-align: center;
-  }
-  h1 {
-    font-size: 3rem;
-    margin: 0 0 6px 0;
-  }
-  .nickname {
-    font-size: 1.5rem;
-    color: #b497db;
-    margin-bottom: 6px;
-  }
-  .aliases {
-    font-size: 1rem;
-    color: #d0bff9;
-    margin-bottom: 30px;
-    font-style: italic;
-  }
-  .social-buttons {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 16px;
-    justify-content: center;
-    margin-bottom: 40px;
-  }
-  .btn {
-    background: rgba(255 255 255 / 0.15);
-    border: none;
-    border-radius: 32px;
-    padding: 12px 20px;
-    color: #f0e9ff;
-    font-weight: 600;
-    font-size: 1rem;
-    cursor: pointer;
-    text-decoration: none;
-    display: flex;
-    align-items: center;
-    gap: 10px;
-    transition: background-color 0.3s ease;
-    min-width: 180px;
-    justify-content: center;
-  }
-  .btn:hover {
-    background: rgba(255 255 255 / 0.35);
-  }
-  .btn i {
-    font-size: 1.3rem;
-  }
-  .credits {
-    font-size: 1.15rem;
-    line-height: 1.5;
-    color: #d0bff9;
-    max-width: 320px;
-    margin-bottom: 40px;
-  }
-  .credits a {
-    color: #e3d1ff;
-    text-decoration: none;
-    font-weight: 700;
-    cursor: pointer;
-  }
-  .credits a:hover {
-    text-decoration: underline;
-  }
-  @media (max-width: 480px) {
-    h1 {
-      font-size: 2.2rem;
-    }
-    .btn {
-      min-width: 140px;
-      font-size: 0.9rem;
-      padding: 10px 14px;
-    }
-  }
-</style>
-</head>
-<body>
-  <h1>howos1</h1>
-  <div class="nickname">Также известен как: ! hws_ \ hworast \ kotikhwsuwu</div>
-
-  <div class="social-buttons">
-    <a class="btn" href="https://www.grfruit.ru" target="_blank" rel="noopener">
-      <i class="fas fa-apple-whole"></i> grfruit.ru
-    </a>
-    <a class="btn" href="https://steamcommunity.com/id/howosyyou" target="_blank" rel="noopener">
-      <i class="fab fa-steam"></i> Steam
-    </a>
-    <a class="btn" href="https://www.tiktok.com/@hworast" target="_blank" rel="noopener">
-      <i class="fab fa-tiktok"></i> TikTok
-    </a>
-    <a class="btn" href="https://www.twitch.tv/hws01_" target="_blank" rel="noopener">
-      <i class="fab fa-twitch"></i> Twitch
-    </a>
-    <a class="btn" href="https://x.com/howosy1" target="_blank" rel="noopener">
-      <i class="fab fa-x-twitter"></i> X (Twitter)
-    </a>
-    <a class="btn" href="https://github.com/howos1" target="_blank" rel="noopener">
-      <i class="fab fa-github"></i> GitHub
-    </a>
-    <a class="btn" href="https://open.spotify.com/artist/0XrcwdzxgVeD5KX7c6sYhV?si=TrKvvhVzQwKgBUFZ7xsSIg" target="_blank" rel="noopener">
-      <i class="fab fa-spotify"></i> Spotify
-    </a>
-    <a class="btn" href="https://discord.gg/suMygMpsWH" target="_blank" rel="noopener" style="background:#5865F2;">
-      <i class="fab fa-discord"></i> Discord
-    </a>
-  </div>
-
-  <div class="credits">
-    <div>Музыка писал</div>
-    <div>Рисунки писал</div>
-    <div>ркну в рот писал: <a href="https://drive.google.com/file/d/1tQQXaIlno4f7AQI5uVXixSDC47aPqfic/view" target="_blank" rel="noopener">UeRKN</a></div>
-  </div>
-</body>
-</html>
+in dev
