--- a/index.html
+++ b/index.html
@@ -4,9 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="About furry uwu nyawka, with nickname howosy">
-  <link type="image/png" sizes="32x32" rel="icon" href="https://purplify.grfruit.ru/img/favicon-32x32.png">
-  <link type="image/png" sizes="64x64" rel="icon" href="https://purplify.grfruit.ru/img/favicon-64x64.png">
-  <link type="image/png" sizes="128x128" rel="icon" href="https://purplify.grfruit.ru/img/favicon-128x128.png">
+  <link type="image/png" sizes="512x511" rel="icon" href="https://meow.furrysobachka.ru/img/favicon.png">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <link rel="stylesheet" href="style.css">
