--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <p>привет это хвс, я есть в спотифай, а ты?</p>
     <div class="links">
       <div class="link-item">
-        <a href="https://www.grfruit.ru" target="_blank"><i class="fa-brands fa-internet-explorer"></i></i>GrapeFruit</a>
+        <a href="https://www.grfruit.ru" target="_blank"><i class="fa-brands fa-internet-explorer"></i>GrapeFruit</a>
         <img src="img/rknline.png" alt="Линия" class="line-image rknline-image">
       </div>
       <div class="link-item">
@@ -44,41 +44,126 @@
         <a href="https://discord.gg/suMygMpsWH" target="_blank"><i class="fa-brands fa-discord"></i>Discord</a>
       </div>
     </div>
-  <div class="about-me" id="aboutMe">
-    <img src="img/avatar.png" alt="Аватар" class="avatar-img">
-    <div class="bio-text">
-      <h2>Немножка обо мне</h2>
-      <p>Создатель UeRKN, Purplify, Косточка, пишу музызыку, рисую фурре и всякое такое</p>
-    </div>
-  </div>
 
-  <div class="about-me-two" id="aboutMeTwo">
-    <div class="bio-text">
-      <p>Мои Друзья</p>
-      <a href="https://somedott.space" class="pl-2 pr-2"><img src="https://somedott.space/button.png"></a>
-      <a href="https://tasory.is-a.dev" class="pl-2 pr-2"><img src="https://tasory.is-a.dev/src/buttons/mybutton.jpg"></a>
+    <div class="about-me" id="aboutMe">
+      <img src="img/avatar.png" alt="Аватар" class="avatar-img">
+      <div class="bio-text">
+        <h2>Немножка обо мне</h2>
+        <p>Создатель UeRKN, Purplify, Косточка, пишу музызыку, рисую фурре и всякое такое</p>
+      </div>
     </div>
-  </div>
 
-  </div>
+    <div class="arrows-down">
+      <span class="arrow">↓</span>
+      <span class="arrow">↓</span>
+      <span class="arrow">↓</span>
+    </div>
+
+    <div class="like-and-games">
+      <div class="about-me" id="like">
+        <div class="bio-text">
+          <h2>Шарю за :3</h2>
+          <p>· шуаке канон</p>
+          <p>· фуряшке</p>
+          <p>· интерпопер</p>
+          <p>· MythOS</p>
+          <p>· Oculus (фу какаха)</p>
+        </div>
+      </div>
+
+      <div class="favorite-games">
+        <h2>Любимые игры</h2>
+        <div class="games-grid">
+          <img src="https://shared.fastly.steamstatic.com/store_item_assets/steam/apps/4000/2e52d9b905feebfdaaf2db6ad7afece10991d504/capsule_184x69.jpg?t=1736937068" alt="Garry's Mod">
+          <img src="https://shared.fastly.steamstatic.com/store_item_assets/steam/apps/546560/capsule_184x69.jpg?t=1673391297" alt="Half-Life: Alyx">
+          <img src="https://shared.fastly.steamstatic.com/store_item_assets/steam/apps/1592190/capsule_184x69.jpg?t=1672959398" alt="BONELAB">
+          <img src="https://shared.fastly.steamstatic.com/store_item_assets/steam/apps/1687950/capsule_184x69.jpg?t=1733297467" alt="Persona 5 Royal">
+          <img src="https://shared.fastly.steamstatic.com/store_item_assets/steam/apps/271590/capsule_184x69.jpg?t=1752701847" alt="GTA V">
+          <img src="https://shared.fastly.steamstatic.com/store_item_assets/steam/apps/1091500/590e0988a2fb79f44d3e31e41fd4949eb76abc41/capsule_184x69.jpg?t=1752757348" alt="Cyberpunk 2077">
+          <img src="https://shared.fastly.steamstatic.com/store_item_assets/steam/apps/629730/af06ceb984281d88ace61451c6bae51c5ef52323/capsule_184x69.jpg?t=1743683696" alt="Blade & Sorcery">
+          <img src="https://shared.fastly.steamstatic.com/store_item_assets/steam/apps/1167630/capsule_184x69.jpg?t=1751447285" alt="Teardown">
+          <img src="https://shared.fastly.steamstatic.com/store_item_assets/steam/apps/12230/capsule_184x69.jpg?t=1634144428" alt="GTA III">
+          <img src="https://shared.fastly.steamstatic.com/store_item_assets/steam/apps/1533390/capsule_184x69.jpg?t=1715638911" alt="Gorilla Tag">
+          <img src="https://shared.fastly.steamstatic.com/store_item_assets/steam/apps/42700/capsule_184x69.jpg?t=1748040520" alt="CoD Black Ops II">
+          <img src="https://shared.fastly.steamstatic.com/store_item_assets/steam/apps/7940/capsule_184x69.jpg?t=1748043968" alt="CoD Modern Warfare">
+        </div>
+      </div>
+    </div>
+
     <footer>
-      <p>2020-2025 GrapeFruit© Все права зафырканы.</p>
+      <div class="myfriends" id="myfriends">
+        <div class="bio-text">
+          <a href="https://somedott.space" class="pl-2 pr-2"><img src="https://somedott.space/button.png"></a>
+          <a href="https://tasory.is-a.dev" class="pl-2 pr-2"><img src="https://tasory.is-a.dev/src/buttons/mybutton.jpg"></a>
+          <img src="https://88by31.neocities.org/music/funny.gif"> <img src="https://88by31.neocities.org/web/noteoth2.gif">
+          <p>2020-2025 GrapeFruit© Все права зафырканы.</p>
+        </div>
+      </div>
     </footer>
   </div>
+
   <script>
     const aboutMe = document.getElementById('aboutMe');
-    const aboutMeTwo = document.getElementById('aboutMeTwo');
+    const myfriends = document.getElementById('myfriends');
+    const like = document.getElementById('like');
+    const favoriteGames = document.querySelector('.favorite-games');
+    const arrowsDown = document.querySelector('.arrows-down');
 
-    const observer = new IntersectionObserver((entries) => {
+    const aboutObserver = new IntersectionObserver((entries) => {
       entries.forEach(entry => {
         if (entry.isIntersecting) {
           aboutMe.classList.add('show');
-          aboutMeTwo.classList.add('show');
         }
       });
     }, { threshold: 0.5 });
+    aboutObserver.observe(aboutMe);
 
-    observer.observe(aboutMe);
+    const arrowsObserver = new IntersectionObserver((entries) => {
+      entries.forEach(entry => {
+        if (entry.isIntersecting) {
+          arrowsDown.classList.add('show');
+        } else {
+          arrowsDown.classList.remove('show');
+          arrowsDown.classList.remove('hide');
+        }
+      });
+    }, { threshold: 0.5 });
+    arrowsObserver.observe(arrowsDown);
+
+    const likeObserver = new IntersectionObserver((entries) => {
+      entries.forEach(entry => {
+        if (entry.isIntersecting) {
+          like.classList.add('show');
+          arrowsDown.classList.add('hide');
+        } else {
+          like.classList.remove('show');
+          arrowsDown.classList.remove('hide');
+        }
+      });
+    }, { threshold: 0.5 });
+    likeObserver.observe(like);
+
+    const gamesObserver = new IntersectionObserver((entries) => {
+      entries.forEach(entry => {
+        if (entry.isIntersecting) {
+          favoriteGames.classList.add('show');
+        } else {
+          favoriteGames.classList.remove('show');
+        }
+      });
+    }, { threshold: 0.5 });
+    gamesObserver.observe(favoriteGames);
+
+    const friendsObserver = new IntersectionObserver((entries) => {
+      entries.forEach(entry => {
+        if (entry.isIntersecting) {
+          myfriends.classList.add('show');
+        } else {
+          myfriends.classList.remove('show');
+        }
+      });
+    }, { threshold: 0.5 });
+    friendsObserver.observe(myfriends);
 
     var cursor = new osuCursor();
   </script>
