--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
           <a href="https://somedott.space" class="pl-2 pr-2"><img src="https://somedott.space/button.png"></a>
           <a href="https://tasory.is-a.dev" class="pl-2 pr-2"><img src="https://tasory.is-a.dev/src/buttons/mybutton.jpg"></a>
           <img src="https://88by31.neocities.org/music/funny.gif"> <img src="https://88by31.neocities.org/web/noteoth2.gif">
+          <img src="https://tasory.is-a.dev/src/buttons/misterp.png">
           <p>2020-2025 GrapeFruit© Все права зафырканы.</p>
         </div>
       </div>
