--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       <img src="img/avatar.png" alt="Аватар" class="avatar-img">
       <div class="bio-text">
         <h2>Немножка обо мне</h2>
-        <p>Создатель UeRKN, Purplify, Косточка, пишу музызыку, рисую фурре и всякое такое</p>
+        <p>Создатель UeRKN, Purplify, Косточка, пишу музяку, рисую фурре и всякое такое</p>
       </div>
     </div>
 
