--- a/index.html
+++ b/index.html
@@ -50,42 +50,16 @@
       <div class="bio-text">
         <h2>Немножка обо мне</h2>
         <p>Создатель UeRKN, Purplify, Косточка, пишу музяку, рисую фурре и всякое такое</p>
-      </div>
-    </div>
-
-    <div class="arrows-down">
-      <span class="arrow">↓</span>
-      <span class="arrow">↓</span>
-      <span class="arrow">↓</span>
-    </div>
-
-    <div class="like-and-games">
-      <div class="about-me" id="like">
-        <div class="bio-text">
+        
+        <div class="like-section">
           <h2>Шарю за :3</h2>
-          <p>· шуаке канон</p>
-          <p>· фуряшке</p>
-          <p>· интерпопер</p>
-          <p>· MythOS</p>
-          <p>· Oculus (фу какаха)</p>
-        </div>
-      </div>
-
-      <div class="favorite-games">
-        <h2>Любимые игры</h2>
-        <div class="games-grid">
-          <img src="https://shared.fastly.steamstatic.com/store_item_assets/steam/apps/4000/2e52d9b905feebfdaaf2db6ad7afece10991d504/capsule_184x69.jpg?t=1736937068" alt="Garry's Mod">
-          <img src="https://shared.fastly.steamstatic.com/store_item_assets/steam/apps/546560/capsule_184x69.jpg?t=1673391297" alt="Half-Life: Alyx">
-          <img src="https://shared.fastly.steamstatic.com/store_item_assets/steam/apps/1592190/capsule_184x69.jpg?t=1672959398" alt="BONELAB">
-          <img src="https://shared.fastly.steamstatic.com/store_item_assets/steam/apps/1687950/capsule_184x69.jpg?t=1733297467" alt="Persona 5 Royal">
-          <img src="https://shared.fastly.steamstatic.com/store_item_assets/steam/apps/271590/capsule_184x69.jpg?t=1752701847" alt="GTA V">
-          <img src="https://shared.fastly.steamstatic.com/store_item_assets/steam/apps/1091500/590e0988a2fb79f44d3e31e41fd4949eb76abc41/capsule_184x69.jpg?t=1752757348" alt="Cyberpunk 2077">
-          <img src="https://shared.fastly.steamstatic.com/store_item_assets/steam/apps/629730/af06ceb984281d88ace61451c6bae51c5ef52323/capsule_184x69.jpg?t=1743683696" alt="Blade & Sorcery">
-          <img src="https://shared.fastly.steamstatic.com/store_item_assets/steam/apps/1167630/capsule_184x69.jpg?t=1751447285" alt="Teardown">
-          <img src="https://shared.fastly.steamstatic.com/store_item_assets/steam/apps/12230/capsule_184x69.jpg?t=1634144428" alt="GTA III">
-          <img src="https://shared.fastly.steamstatic.com/store_item_assets/steam/apps/1533390/capsule_184x69.jpg?t=1715638911" alt="Gorilla Tag">
-          <img src="https://shared.fastly.steamstatic.com/store_item_assets/steam/apps/42700/capsule_184x69.jpg?t=1748040520" alt="CoD Black Ops II">
-          <img src="https://shared.fastly.steamstatic.com/store_item_assets/steam/apps/7940/capsule_184x69.jpg?t=1748043968" alt="CoD Modern Warfare">
+          <div class="like-content">
+            <p>· шуаке канон</p>
+            <p>· фуряшке</p>
+            <p>· интерпопер</p>
+            <p>· MythOS</p>
+            <p>· Oculus (фу какаха)</p>
+          </div>
         </div>
       </div>
     </div>
@@ -104,68 +78,6 @@
   </div>
 
   <script>
-    const aboutMe = document.getElementById('aboutMe');
-    const myfriends = document.getElementById('myfriends');
-    const like = document.getElementById('like');
-    const favoriteGames = document.querySelector('.favorite-games');
-    const arrowsDown = document.querySelector('.arrows-down');
-
-    const aboutObserver = new IntersectionObserver((entries) => {
-      entries.forEach(entry => {
-        if (entry.isIntersecting) {
-          aboutMe.classList.add('show');
-        }
-      });
-    }, { threshold: 0.5 });
-    aboutObserver.observe(aboutMe);
-
-    const arrowsObserver = new IntersectionObserver((entries) => {
-      entries.forEach(entry => {
-        if (entry.isIntersecting) {
-          arrowsDown.classList.add('show');
-        } else {
-          arrowsDown.classList.remove('show');
-          arrowsDown.classList.remove('hide');
-        }
-      });
-    }, { threshold: 0.5 });
-    arrowsObserver.observe(arrowsDown);
-
-    const likeObserver = new IntersectionObserver((entries) => {
-      entries.forEach(entry => {
-        if (entry.isIntersecting) {
-          like.classList.add('show');
-          arrowsDown.classList.add('hide');
-        } else {
-          like.classList.remove('show');
-          arrowsDown.classList.remove('hide');
-        }
-      });
-    }, { threshold: 0.5 });
-    likeObserver.observe(like);
-
-    const gamesObserver = new IntersectionObserver((entries) => {
-      entries.forEach(entry => {
-        if (entry.isIntersecting) {
-          favoriteGames.classList.add('show');
-        } else {
-          favoriteGames.classList.remove('show');
-        }
-      });
-    }, { threshold: 0.5 });
-    gamesObserver.observe(favoriteGames);
-
-    const friendsObserver = new IntersectionObserver((entries) => {
-      entries.forEach(entry => {
-        if (entry.isIntersecting) {
-          myfriends.classList.add('show');
-        } else {
-          myfriends.classList.remove('show');
-        }
-      });
-    }, { threshold: 0.5 });
-    friendsObserver.observe(myfriends);
-
     var cursor = new osuCursor();
   </script>
 </body>
