--- a/index.html
+++ b/index.html
@@ -73,8 +73,9 @@
 
   <div class="myfriends" id="myfriends">
     <div class="bio-text">
-      <a href="https://somedott.space" class="pl-2 pr-2"><img src="https://somedott.space/Button.png"></a>
-      <a href="https://tasory.is-a.dev" class="pl-2 pr-2"><img src="https://tasory.is-a.dev/src/buttons/mybutton.jpg"></a>
+      <a href="https://somedott.space"><img src="https://somedott.space/Button.png"></a>
+      <a href="https://tasory.is-a.dev"><img src="https://tasory.is-a.dev/src/buttons/mybutton.jpg"></a>
+      <a href="https://puhnasty61.github.io"><img src="https://puhnasty61.github.io/PUHNAFTYBUTTON.jpg"></a>
       <img src="https://88by31.neocities.org/music/funny.gif"> <img src="https://88by31.neocities.org/web/noteoth2.gif">
       <img src="https://tasory.is-a.dev/src/buttons/misterp.png">
       <p id="footerText">2020-2025 GrapeFruit© Все права зафырканы.</p>
