--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     </div>
 
     <div class="about-me" id="aboutMe">
-      <img src="https://cdn.grfruit.ru/img/avatar.png" class="avatar-img">
+      <img src="https://images.steamusercontent.com/ugc/13757615504466809714/B0D4A7C5853CD8E0DE14054FF8B6F289D6F2AA2C/?imw=5000&imh=5000&ima=fit&impolicy=Letterbox&imcolor=%23000000&letterbox=false" class="avatar-img">
       <div class="bio-text">
         <h2 id="aboutTitle">Немножка обо мне</h2>
         <p id="aboutText">Создатель UeRKN, Purplify, Косточка, пишу музяку, рисую фурре и всякое такое</p>
