--- a/index.html
+++ b/index.html
@@ -82,6 +82,8 @@
     </div>
   </div>
 
+  <a href="/yuki" class="photos-button"><i class="fa-solid fa-image"></i> Рисунки</a>
+
   <script>
     const langSwitch = document.getElementById('langSwitch');
     let currentLang = 'ru';
