--- a/yuki/index.html
+++ b/yuki/index.html
@@ -21,7 +21,7 @@
     <div class="fullscreen-author" id="fullscreenAuthor"></div>
   </div>
 
-  <a href="index.html" class="back-button">
+  <a href="https://meow.furrysobachka.ru" class="back-button">
     <i class="fas fa-arrow-left"></i> Назад
   </a>
 
