--- a/yuki/index.html
+++ b/yuki/index.html
@@ -3,9 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>YukiMeow Arts</title>
+  <link type="image/png" sizes="512x511" rel="icon" href="https://meow.furrysobachka.ru/img/favicon.png">
   <link rel="stylesheet" href="style-gallery.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+  <title>YukiMeow Arts</title>
 </head>
 <body>
   <div class="container">
