--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       <img src="https://cdn.grfruit.ru/img/avatar.png" class="avatar-img">
       <div class="bio-text">
         <h2 id="aboutTitle">Немножка обо мне</h2>
-        <p id="aboutText">Создатель UeRKN, Purplify, Косточка, пишу музяку, рисую фурре и всякое такое</p>
+        <p id="aboutText">Создатель UeRKN, Oxygène, Косточка, пишу музяку, рисую фурре и всякое такое</p>
         
         <div class="like-section">
           <h2 id="likesTitle">Шарю за :3</h2>
