--- a/index.html
+++ b/index.html
@@ -62,9 +62,10 @@
           <div class="like-content">
             <p id="like1">· шуаке канон</p>
             <p id="like2">· фуряшке</p>
-            <p id="like3">· интерпопер</p>
-            <p id="like4">· MythOS</p>
-            <p id="like5">· Oculus (фу какаха)</p>
+            <p id="like3">· MythOS</p>
+            <p id="like4">· Oculus (фу какаха)</p>
+            <p id="like5">· 7\</p>
+            <p id="like6">· λ</p>
           </div>
         </div>
       </div>
