--- a/index.html
+++ b/index.html
@@ -102,9 +102,10 @@
         document.getElementById('likesTitle').textContent = 'I know about :3';
         document.getElementById('like1').textContent = '· ShuAke';
         document.getElementById('like2').textContent = '· Fluffys';
-        document.getElementById('like3').textContent = '· Interloper';
-        document.getElementById('like4').textContent = '· MythOS';
-        document.getElementById('like5').textContent = '· Oculus (ew cringe)';
+        document.getElementById('like3').textContent = '· MythOS';
+        document.getElementById('like4').textContent = '· Oculus (ew cringe)';
+        document.getElementById('like5').textContent = '· 7\';
+        document.getElementById('like6').textContent = '· λ';
         document.getElementById('footerText').textContent = '2020-2025 GrapeFruit© All rights furred.';
         
         if (rknLine) rknLine.src = 'img/eng/rknline.png';
@@ -120,9 +121,10 @@
         document.getElementById('likesTitle').textContent = 'Шарю за :3';
         document.getElementById('like1').textContent = '· шуаке канон';
         document.getElementById('like2').textContent = '· фуряшке';
-        document.getElementById('like3').textContent = '· интерпопер';
-        document.getElementById('like4').textContent = '· MythOS';
-        document.getElementById('like5').textContent = '· Oculus (фу какаха)';
+        document.getElementById('like3').textContent = '· MythOS';
+        document.getElementById('like4').textContent = '· Oculus (фу какаха)';
+        document.getElementById('like5').textContent = '· 7\';
+        document.getElementById('like6').textContent = '· λ';
         document.getElementById('footerText').textContent = '2020-2025 GrapeFruit© Все права зафырканы.';
         
         if (rknLine) rknLine.src = 'img/rknline.png';
