--- a/index.html
+++ b/index.html
@@ -98,13 +98,13 @@
       if (currentLang === 'ru') {
         document.querySelector('p').textContent = 'hi this is hws, i am on spotify, and you?';
         document.getElementById('aboutTitle').textContent = 'A little about me';
-        document.getElementById('aboutText').textContent = 'Creator of UeRKN, Purplify, SourPith, I write music, draw furries and stuff';
+        document.getElementById('aboutText').textContent = 'Creator of UeRKN, Oxygène, SourPith, I write music, draw furries and stuff';
         document.getElementById('likesTitle').textContent = 'I know about :3';
         document.getElementById('like1').textContent = '· ShuAke';
         document.getElementById('like2').textContent = '· Fluffys';
         document.getElementById('like3').textContent = '· MythOS';
         document.getElementById('like4').textContent = '· Oculus (ew cringe)';
-        document.getElementById('like5').textContent = '· 7\';
+        document.getElementById('like5').textContent = "· 7\\";
         document.getElementById('like6').textContent = '· λ';
         document.getElementById('footerText').textContent = '2020-2025 GrapeFruit© All rights furred.';
         
@@ -117,13 +117,13 @@
       } else {
         document.querySelector('p').textContent = 'привет это хвс, я есть в спотифай, а ты?';
         document.getElementById('aboutTitle').textContent = 'Немножка обо мне';
-        document.getElementById('aboutText').textContent = 'Создатель UeRKN, Purplify, Косточка, пишу музяку, рисую фурре и всякое такое';
+        document.getElementById('aboutText').textContent = 'Создатель UeRKN, Oxygène, Косточка, пишу музяку, рисую фурре и всякое такое';
         document.getElementById('likesTitle').textContent = 'Шарю за :3';
         document.getElementById('like1').textContent = '· шуаке канон';
         document.getElementById('like2').textContent = '· фуряшке';
         document.getElementById('like3').textContent = '· MythOS';
         document.getElementById('like4').textContent = '· Oculus (фу какаха)';
-        document.getElementById('like5').textContent = '· 7\';
+        document.getElementById('like5').textContent = "· 7\\";
         document.getElementById('like6').textContent = '· λ';
         document.getElementById('footerText').textContent = '2020-2025 GrapeFruit© Все права зафырканы.';
         
