--- a/index.html
+++ b/index.html
@@ -64,8 +64,9 @@
             <p id="like2">· фуряшке</p>
             <p id="like3">· MythOS</p>
             <p id="like4">· Oculus (фу какаха)</p>
-            <p id="like5">· 7\</p>
+            <p id="like5">· Интерлопер</p>
             <p id="like6">· λ</p>
+            <p id="like7">· 7\</p>
           </div>
         </div>
       </div>
@@ -104,8 +105,9 @@
         document.getElementById('like2').textContent = '· Fluffys';
         document.getElementById('like3').textContent = '· MythOS';
         document.getElementById('like4').textContent = '· Oculus (ew cringe)';
-        document.getElementById('like5').textContent = "· 7\\";
+        document.getElementById('like5').textContent = '· Interloper';
         document.getElementById('like6').textContent = '· λ';
+        document.getElementById('like7').textContent = "· 7\\";
         document.getElementById('footerText').textContent = '2020-2025 GrapeFruit© All rights furred.';
         
         if (rknLine) rknLine.src = 'img/eng/rknline.png';
@@ -123,8 +125,9 @@
         document.getElementById('like2').textContent = '· фуряшке';
         document.getElementById('like3').textContent = '· MythOS';
         document.getElementById('like4').textContent = '· Oculus (фу какаха)';
-        document.getElementById('like5').textContent = "· 7\\";
+        document.getElementById('like5').textContent = '· Интерлопер';
         document.getElementById('like6').textContent = '· λ';
+        document.getElementById('like7').textContent = "· 7\\";
         document.getElementById('footerText').textContent = '2020-2025 GrapeFruit© Все права зафырканы.';
         
         if (rknLine) rknLine.src = 'img/rknline.png';
