--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     </div>
 
     <div class="about-me" id="aboutMe">
-      <img src="https://cdn.grfruit.ru/img/avatar.png" class="avatar-img">
+      <img src="https://meow.furrysobachka.ru/img/avatar.png" class="avatar-img">
       <div class="bio-text">
         <h2 id="aboutTitle">Немножка обо мне</h2>
         <p id="aboutText">Создатель UeRKN, Oxygène, Косточка, пишу музяку, рисую фурре и всякое такое</p>
