--- a/yuki/index.html
+++ b/yuki/index.html
@@ -5,7 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link type="image/png" sizes="512x511" rel="icon" href="https://meow.furrysobachka.ru/img/favicon.png">
   <link rel="stylesheet" href="https://meow.furrysobachka.ru/yuki/style-gallery.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300..700&display=swap" rel="stylesheet">
   <title>YukiMeow Arts</title>
 </head>
 <body>
@@ -108,3 +110,4 @@
   </script>
 </body>
 </html>
+
