--- a/yuki/index.html
+++ b/yuki/index.html
@@ -8,7 +8,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300..700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style-gallery.css">
   <meta name="description" content="About furry uwu nyawka, with nickname howosy">
   <title>YukiMeow Arts</title>
 </head>
@@ -112,5 +112,6 @@
   </script>
 </body>
 </html>
+
 
 
