--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <a href="https://github.com/howos1" target="_blank"><i class="fa-brands fa-github"></i>GitHub</a>
       </div>
       <div class="link-item">
-        <a href="https://open.spotify.com/artist/0XrcwdzxgVeD5KX7c6sYhV?si=TrKvvhVzQwKgBUFZ7xsSIg" target="_blank"><i class="fa-brands fa-spotify"></i>Spotify</a>
+        <a href="https://open.spotify.com/artist/0XrcwdzxgVeD5KX7c6sYhV" target="_blank"><i class="fa-brands fa-spotify"></i>Spotify</a>
         <img src="img/musicline.png" class="line-image musicline-image" id="musicLine">
       </div>
       <div class="link-item">
@@ -79,8 +79,9 @@
       <!-- <a href="https://puhnasty61.github.io"><img src="https://puhnasty61.github.io/PUHNAFTYBUTTON.jpg"></a> -->
       <a href="https://www.grfruit.ru"><img src="https://cdn.grfruit.ru/img/grfruit_button.png"></a> 
       <!-- <a href="https://sakeyo.space"><img src="https://sakeyo.space/images/SakeButton.png"></a> -->
-      <img src="https://88by31.neocities.org/music/funny.gif"> <img src="https://88by31.neocities.org/web/noteoth2.gif">
-      <img src="https://tasory.is-a.dev/src/buttons/misterp.png">
+      <img src="https://88by31.neocities.org/music/funny.gif">
+      <img src="https://88by31.neocities.org/web/noteoth2.gif">
+      <img src="https://meow.furrysobachka.ru/img/misterp.png">
       <p id="footerText">2020-2025 GrapeFruit© Все права зафырканы.</p>
     </div>
   </div>
