--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300..700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <link rel="stylesheet" href="style.css">
+  <script src="https://cdn.jsdelivr.net/gh/solstice23/osu-cursor@main/dist/index.umd.js"></script>
   <meta name="description" content="About furry uwu nyawka, with nickname howosy">
   <title>About Furry Nyawka</title>
 </head>
@@ -158,5 +159,25 @@
     window.addEventListener("resize", checkScroll);
     window.addEventListener("load", checkScroll);
   </script>
+<!-- osu! cursor -->
+<style>
+  * {
+    cursor: none !important;
+  }
+  .osu-cursor {
+    position: fixed;
+    pointer-events: none;
+    z-index: 9999;
+  }
+</style>
+
+<script>
+  document.addEventListener('DOMContentLoaded', function() {
+    const cursor = new osuCursor({
+      rotate: true,
+      size: 1.0
+    });
+  });
+</script>
 </body>
 </html>
