--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300..700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <link rel="stylesheet" href="style.css">
-  <script src="https://cdn.jsdelivr.net/gh/solstice23/osu-cursor@main/dist/index.umd.js"></script>
+  <script src="https://meow.furrysobachka.ru/osu-cursor/dist/index.cjs.js"></script>
   <meta name="description" content="About furry uwu nyawka, with nickname howosy">
   <title>About Furry Nyawka</title>
 </head>
